<resources>
    <string name="app_name">MyAppMenuSQLite</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="action_settings">Settings</string>
    <string name="primera_pantalla_registro">Pantalla Registro</string>
    <string name="pantalla_principal">Pantalla Principal</string>
    <string name="segunda_pantalla_login">Pantalla Login</string>
    <string name="mixta_pantalla">Sub Menu</string>
    <string name="pantalla3">Pantalla3</string>
    <string name="pantalla4">Pantalla4</string>

    <string name="title_primeraactividad">Registro</string>
    <string name="Login_Activity">Login</string>
    <string name="bienvenido_Activity">Bienvenido</string>
    <string name="pantalla3_Activity">Pantalla3</string>
    <string name="pantalla4_Activity">Pantalla4</string>
    <string name="title_segundaactividad">Acceso</string>
    <string name="Button_primeraactividad">Registro</string>
    <string name="Button_Login">Login</string>
    <string name="Button_segundaactividad">Acceso</string>

</resources>
